# face_verification

./: .gitignore  CMakeLists.txt
include/: classifier.h  feature_operation.h  util.h
release/: CMakeLists.txt  face_verification.cpp  face_verification.h  main.cpp
release/data/: feature.txt
src/: classifier.cpp  feature_operation.cpp  main.cpp  util.cpp
